# youtube

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  dashboard.py  pyproject.toml
assets/bgm/: 2026. 4. 19. 오전 2_08_44.m4a
batch/: schedule.json
config/: bgm_library.yaml  character_templates.yaml  cta_templates.yaml  emotional_arcs.yaml  font_config.yaml  monetization_blocks.yaml  safety_rules.yaml  settings.yaml  timing_curves.yaml
scripts/: cost_report.py  generate_channel_assets.py  generate_characters.py  setup_env.sh
series/: our_family.yaml
series/drafts/: father_pov_stories.md  full_scenario_v1.md  full_scenario_v2.md  full_scenario_v3.md  full_scenario_v4.md  mother_pov_stories.md  series_overview.md  son_pov_stories.md
series/prompts/: son_pov_story_drafts.md
src/: __main__.py  cli.py  models.py  orchestrator.py  project_manager.py  series_loader.py
src/engines/: elevenlabs_client.py  engine_factory.py  ffmpeg_wrapper.py  gemini_image_client.py  image_client.py  llm_client.py  tts_client.py  veo_video_client.py  video_gen_client.py
src/pipeline/: a_script_gen.py  b_scene_segment.py  base_stage.py  c2_character_sheet.py  c_visual_prompt.py  d_tts_gen.py  e_bgm_select.py  f_subtitle_split.py  g2_image_to_video.py  g_image_gen.py  h_video_compose.py  i_thumbnail_gen.py  j_metadata_gen.py  k_monetization_desc.py  l_shorts_teaser.py  m_export_package.py  video_paths.py
src/utils/: cache.py  cost_tracker.py  hangul_utils.py  logging_setup.py  retry.py
tests/: conftest.py  test_hangul_utils.py  test_models.py  test_subtitle.py
(+2 files in other folders)
